Post and Comment routes added
